--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
 <!-- index.html -->
+
 <div id="app">Please wait...</div>
+<script>
+  window.$docsify = {
+    loadSidebar: true
+  }
+</script>
+<script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
 <!DOCTYPE html>
 <html>
 <head>
